--- a/EcmaScript 6/TP2/styles.css
+++ b/EcmaScript 6/TP2/styles.css
@@ -1,15 +1,15 @@
-:root{
+:root {
   --containerColor: rgb(255, 255, 255);
   --bgColor: rgb(58, 143, 228);
 }
 
-body{
+body {
   width: 100%;
   height: 100vh;
   background-color: var(--bgColor);
 }
 
-.container{
+.container {
   width: 40%;
   top: 50%;
   left: 50%;
@@ -18,11 +18,11 @@ body{
   min-width: 450px;
   position: absolute;
   min-height: 100px;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-#nuevaTarea{
+#nuevaTarea {
   position: relative;
   display: flex;
   flex-direction: row;
@@ -30,7 +30,7 @@ body{
   align-items: center;
   padding: 30px 20px;
 }
-#nuevaTarea input{
+#nuevaTarea input {
   width: 65%;
   height: 35px;
   padding: 12px;
@@ -38,16 +38,16 @@ body{
   font-weight: 500;
   position: relative;
   border-radius: 5px;
-  font-family: 'Poppins',sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 15px;
   border: 2px solid #d1d3d4;
 }
 
-#nuevaTarea input:focus{
+#nuevaTarea input:focus {
   outline: none;
   border-color: #0d75ec;
 }
-#nuevaTarea button{
+#nuevaTarea button {
   position: relative;
   /* float: right; */
   font-weight: 500;
@@ -60,10 +60,10 @@ body{
   width: 20%;
   height: 45px;
   border-radius: 5px;
-  font-family: 'Poppins',sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
-#tareas{
+#tareas {
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -74,7 +74,7 @@ body{
   /* margin-top: 10px; */
 }
 
-.tarea{
+.tarea {
   background-color: #c5e1e6;
   height: 50px;
   width: 90%;
@@ -88,13 +88,13 @@ body{
   cursor: pointer;
 }
 
-.tarea span{
-  font-family: 'Poppins',sans-serif;
+.tarea span {
+  font-family: "Poppins", sans-serif;
   font-size: 15px;
   font-weight: 400;
 }
 
-.tarea input{
+.tarea input {
   position: relative;
   width: 25px;
   height: 25px;
@@ -103,7 +103,7 @@ body{
   cursor: pointer;
 }
 
-.textoTarea{
+.textoTarea {
   width: 90%;
   margin-left: 20px;
 }
