--- a/EcmaScript 6/TP2/styles.css
+++ b/EcmaScript 6/TP2/styles.css
@@ -7,6 +7,8 @@ body {
   width: 100%;
   height: 100vh;
   background-color: var(--bgColor);
+  overflow: hidden;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
@@ -64,12 +66,15 @@ body {
 }
 
 #tareas {
+  max-height: fit-content;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
   background-color: #ffffff;
+  max-height: 70vh;
+  overflow-y: scroll;
   /* padding-block-start: 20px; */
   /* margin-top: 10px; */
 }
@@ -106,4 +111,8 @@ body {
 .textoTarea {
   width: 90%;
   margin-left: 20px;
+}
+
+.completada {
+
 }
