--- a/EcmaScript 6/TP2/styles.css
+++ b/EcmaScript 6/TP2/styles.css
@@ -1,6 +1,7 @@
 :root {
   --containerColor: rgb(255, 255, 255);
-  --bgColor: rgb(58, 143, 228);
+  --bgColor: rgb(233, 153, 111);
+  --completada: rgb(124, 129, 124);
 }
 
 body {
@@ -21,19 +22,19 @@ body {
   position: absolute;
   min-height: 100px;
   transform: translate(-50%, -50%);
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 #nuevaTarea {
   position: relative;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   padding: 30px 20px;
 }
 #nuevaTarea input {
-  width: 65%;
+  width: 50%;
   height: 35px;
   padding: 12px;
   color: #111111;
@@ -59,13 +60,15 @@ body {
   color: #ffffff;
   cursor: pointer;
   outline: none;
-  width: 20%;
+  /* width: 15%; */
+  max-width: fit-content;
+  padding-inline: 0.7em;
   height: 45px;
   border-radius: 5px;
   font-family: "Poppins", sans-serif;
 }
 
-#tareas {
+.tareas {
   max-height: fit-content;
   border-radius: 10px;
   display: flex;
@@ -73,10 +76,33 @@ body {
   align-items: center;
   position: relative;
   background-color: #ffffff;
-  max-height: 70vh;
+  max-height: 50vh;
   overflow-y: scroll;
   /* padding-block-start: 20px; */
   /* margin-top: 10px; */
+}
+
+#bottom{
+  display: flex;
+  overflow: hidden;
+}
+
+#bottom hr {
+  width: 100%;
+  padding-bottom: 0;
+}
+
+#tareaMasRapida{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding-bottom: 0.5em;
+}
+
+#tareaMasRapida h3{
+  margin-top: 0;
 }
 
 .tarea {
@@ -90,7 +116,6 @@ body {
   align-items: center;
   justify-content: space-between;
   border: 1px solid #939697;
-  cursor: pointer;
 }
 
 .tarea span {
@@ -114,5 +139,18 @@ body {
 }
 
 .completada {
+  text-decoration: line-through;
+  background-color: var(--completada);
+}
 
+.completada input {
+  pointer-events: none;
+}
+
+#bottom{
+  visibility: hidden;
+}
+
+.mas-rapida{
+  background-color: rgb(70, 238, 70);
 }
